tests/netedit/demandElements/waypoint/basic/invalid_parent/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 304 - 168
dummyParent
TestFunctions: Clicked over position 550 - 423
route_0
TestFunctions: Clicked over position 550 - 423
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Netedit closed successfully
